Restructured and fixed error with calling the wrong parse function

--- a/vectornav/CMakeLists.txt
+++ b/vectornav/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.5)
-project(vectornav_node)
+project(vectornav)
 
 if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
   add_compile_options(-Wall -Wextra -Wpedantic)
@@ -10,12 +10,16 @@ find_package(ament_cmake REQUIRED)
 find_package(libvncxx REQUIRED)
 find_package(sensor_msgs REQUIRED)
 find_package(rclcpp REQUIRED)
+find_package(rclcpp_components REQUIRED)
 
 add_library(vectornav_node SHARED src/vectornav_node.cpp)
 target_include_directories(
   vectornav_node PUBLIC "$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>"
                         "$<INSTALL_INTERFACE:include>")
-ament_target_dependencies(vectornav_node "rclcpp" "libvncxx" "sensor_msgs")
+ament_target_dependencies(vectornav_node "rclcpp" "rclcpp_components"
+                          "libvncxx" "sensor_msgs")
+target_compile_definitions(vectornav_node PRIVATE "COMPOSITION_BUILDING_DLL")
+rclcpp_components_register_nodes(vectornav_node "vn_ros::VectorNavNode")
 target_compile_options(
   vectornav_node PRIVATE -Wall -Wextra # reasonable and standard
                          -Wpedantic # warn if non-standard C++ is used
@@ -36,5 +40,7 @@ install(
 install(DIRECTORY include/ DESTINATION include)
 
 install(TARGETS vectornav_exec RUNTIME DESTINATION lib/${PROJECT_NAME})
+
+install(DIRECTORY launch DESTINATION share/${PROJECT_NAME})
 
 ament_package()
