--- a/vectornav/package.xml
+++ b/vectornav/package.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>vectornav_node</name>
+  <name>vectornav</name>
   <version>0.0.0</version>
   <description>Vectornav IMU node</description>
   <maintainer email="mdeegan@umich.edu">martin</maintainer>
@@ -10,6 +10,7 @@
   <buildtool_depend>ament_cmake</buildtool_depend>
 
   <build_depend>rclcpp</build_depend>
+  <build_depend>rclcpp_components</build_depend>
   <build_depend>libvncxx</build_depend>
   <build_depend>sensor_msgs</build_depend>
 
